--- a/style/social.css
+++ b/style/social.css
@@ -65,7 +65,7 @@
 
 .fa-link {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
-	background: var(--color-link);
+	/* background: var(--color-link); */
 }
 
 .fa-clone {
