--- a/style/social.css
+++ b/style/social.css
@@ -86,11 +86,15 @@
 }
 
 
-.fa-download {
+.fa-share {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 	background: var(--color-download);
 }
 
+.fa-download {
+	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+	background: var(--color-download);
+}
 
 .fa-envelope {
 	text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
